--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -1,116 +1,121 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head(title)">
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-    <title th:text="${title}">게시판</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
+
+    <title th:text="${title}">Hello, Spring Boot!</title>
 </head>
-
 <body>
-<div th:fragment="menu">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="menu(menu)">
+    <a class="navbar-brand" href="#">Spring Boot Tutorial</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:fragment="menu(menu)">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">코린이 대피소</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item" th:classappend="${menu}=='home'? 'active'">
-                        <a class="nav-link" href="@{/}">홈<span class = "sr-only" th:if="${menu} == 'home'">(current)</span></a>
-                    </li>
-                    <!--                    <li class="nav-item">-->
-                    <!--                        <a class="nav-link" href="#">게시판</a>-->
-                    <!--                    </li>-->
-                    <li class="nav-item dropdown" th:classappend="${menu} == 'board'? 'active'">
-                        <a class="nav-link dropdown-toggle" href="@{/board/list}" id="dropdown01" data-bs-toggle="dropdown"
-                           aria-expanded="false">언어게시판<span class = "sr-only" th:if="${menu} == 'board'">(current)</span></a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">C++/C</a></li>
-                            <li><a class="dropdown-item" href="#">Java/Spring</a></li>
-                            <li><a class="dropdown-item" href="#">Python/django,Flask</a></li>
-                            <li><a class="dropdown-item" href="#">HTML/CSS/JavaScript</a></li>
-                            <li><a class="dropdown-item" href="#">TypeScript/Node.js</a></li>
-                            <li><a class="dropdown-item" href="#">React/Angular/View</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
-                           aria-expanded="false">에러노트</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">Window</a></li>
-                            <li><a class="dropdown-item" href="#">MAC OS</a></li>
-                            <li><a class="dropdown-item" href="#">LINUX</a></li>
-                            <li><a class="dropdown-item" href="#">IDE</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
-                           aria-expanded="false">Best 게시글</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">책</a></li>
-                            <li><a class="dropdown-item" href="#">GitHub</a></li>
-                            <li><a class="dropdown-item" href="#">YouTube</a></li>
-                            <li><a class="dropdown-item" href="#">NaverTv</a></li>
-                            <li><a class="dropdown-item" href="#">NaverBlog/Tistory</a></li>
-                            <li><a class="dropdown-item" href="#">Medium/Brunch/Gitpage/velog</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
-                           aria-expanded="false">취업 정보</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">Front-end</a></li>
-                            <li><a class="dropdown-item" href="#">Back-end</a></li>
-                            <li><a class="dropdown-item" href="#">인공지능/머신러닝</a></li>
-                            <li><a class="dropdown-item" href="#">데이터 사이언스</a></li>
-                            <li><a class="dropdown-item" href="#">시스템네트워크/보안/하드웨어</a></li>
-                            <li><a class="dropdown-item" href="#">DevOps</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
-                           aria-expanded="false">연구원/회사원</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">Python-데이터분석</a></li>
-                            <li><a class="dropdown-item" href="#">인공지능/머신러닝</a></li>
-                            <li><a class="dropdown-item" href="#">웹개발</a></li>
-                            <li><a class="dropdown-item" href="#">업무 자동화</a></li>
-                            <li><a class="dropdown-item" href="#">업무 툴</a></li>
-                            <li><a class="dropdown-item" href="#">MatLab</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
-                           aria-expanded="false">Q&A</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                            <li><a class="dropdown-item" href="#">멘토링</a></li>
-                            <li><a class="dropdown-item" href="#">알고리즘/자료구조</a></li>
-                            <li><a class="dropdown-item" href="#">포트폴리오</a></li>
-                            <li><a class="dropdown-item" href="#">기술/실무면접</a></li>
-                            <li><a class="dropdown-item" href="#">이직</a></li>
-                        </ul>
-                    </li>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item" th:classappend="${menu} == 'home'? 'active'">
+                <a class="nav-link" href="#" th:href="@{/}">홈 <span class="sr-only" th:if="${menu} == 'home'">(current)</span></a>
+            </li>
+            <li class="nav-item" th:classappend="${menu} == 'board'? 'active'">
+                <a class="nav-link" href="#" th:href="@{/board/list}">게시판 <span class="sr-only" th:if="${menu} == 'board'">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown" th:classappend="${menu} == 'board'? 'active'">
+                <a class="nav-link dropdown-toggle" href="@{/board/list}" id="dropdown01" data-bs-toggle="dropdown"
+                   aria-expanded="false">언어게시판<span class = "sr-only" th:if="${menu} == 'board'">(current)</span></a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">C++/C</a></li>
+                    <li><a class="dropdown-item" href="#">Java/Spring</a></li>
+                    <li><a class="dropdown-item" href="#">Python/django,Flask</a></li>
+                    <li><a class="dropdown-item" href="#">HTML/CSS/JavaScript</a></li>
+                    <li><a class="dropdown-item" href="#">TypeScript/Node.js</a></li>
+                    <li><a class="dropdown-item" href="#">React/Angular/View</a></li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-</div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
+                   aria-expanded="false">에러노트</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">Window</a></li>
+                    <li><a class="dropdown-item" href="#">MAC OS</a></li>
+                    <li><a class="dropdown-item" href="#">LINUX</a></li>
+                    <li><a class="dropdown-item" href="#">IDE</a></li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown"
+                   aria-expanded="false">Best 게시글</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">책</a></li>
+                    <li><a class="dropdown-item" href="#">GitHub</a></li>
+                    <li><a class="dropdown-item" href="#">YouTube</a></li>
+                    <li><a class="dropdown-item" href="#">NaverTv</a></li>
+                    <li><a class="dropdown-item" href="#">NaverBlog/Tistory</a></li>
+                    <li><a class="dropdown-item" href="#">Medium/Brunch/Gitpage/velog</a></li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
+                   aria-expanded="false">취업 정보</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">Front-end</a></li>
+                    <li><a class="dropdown-item" href="#">Back-end</a></li>
+                    <li><a class="dropdown-item" href="#">인공지능/머신러닝</a></li>
+                    <li><a class="dropdown-item" href="#">데이터 사이언스</a></li>
+                    <li><a class="dropdown-item" href="#">시스템네트워크/보안/하드웨어</a></li>
+                    <li><a class="dropdown-item" href="#">DevOps</a></li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown"
+                   aria-expanded="false">연구원/회사원</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">Python-데이터분석</a></li>
+                    <li><a class="dropdown-item" href="#">인공지능/머신러닝</a></li>
+                    <li><a class="dropdown-item" href="#">웹개발</a></li>
+                    <li><a class="dropdown-item" href="#">업무 자동화</a></li>
+                    <li><a class="dropdown-item" href="#">업무 툴</a></li>
+                    <li><a class="dropdown-item" href="#">MatLab</a></li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown06" data-bs-toggle="dropdown"
+                   aria-expanded="false">Q&A</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                    <li><a class="dropdown-item" href="#">멘토링</a></li>
+                    <li><a class="dropdown-item" href="#">알고리즘/자료구조</a></li>
+                    <li><a class="dropdown-item" href="#">포트폴리오</a></li>
+                    <li><a class="dropdown-item" href="#">기술/실무면접</a></li>
+                    <li><a class="dropdown-item" href="#">이직</a></li>
+                </ul>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li> -->
+        </ul>
+        <!-- <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
+    </div>
+</nav>
 </body>
 </html>
+
