Second Draft(Login, Register by Spring Security&thymeleaf &bootstratp) modified

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="css/starter-template.css" rel="stylesheet">
 
-    <title>Hello, Spring Boot!</title>
+    <title>코린이 대피소</title>
 </head>
 
 <body>
@@ -36,9 +36,11 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>Srping Boot Tutorial</h1>
-        <p class="lead">Spring Boot을 이용해 웹 페이지 제작<br>
-            Spring Security, JPA를 이용해 보안 설정과 데이터 다루기</p>
+        <h1>코린이 대피소</h1>
+        <p class="lead">나는 코딩이랑은 안 맞아 자책만 하시지 않으셨나요? <br>
+            코딩에 어려움을 겪는 당신에게<br>코딩이라는 개념은 알지만 실제로 활용하고픈 당신에게<br>
+            에러 대응이나 취업 관련 정보, 개발자 관련 정보를 보다 명확히 얻고 싶은 당신에게<br>
+            코린이 대피소가 함께합니다.</p>
     </div>
 
 </main>
